# pokebot

./: agent.py  discord_bot.py  main.py  pyproject.toml  tools.py
app/: agent.py  cli.py  embeds.py  main.py  tools.py
app/api/: routes.py
app/discord/: bot.py
knowledge_base/: items.json  knowledge_base.json  pokemon.json  synergies.json
scratch/: validate_bot.py
