[project]
name = "pokebot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "deepagents>=0.5.3",
    "discord-py>=2.7.1",
    "fastapi[standard]>=0.136.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=1.1.16",
    "python-dotenv>=1.2.2",
]
